--- a/doc/report.tex
+++ b/doc/report.tex
@@ -72,8 +72,15 @@
 \section{TODO}
 
 \begin{itemize}
-  \item Output for all variables the set of types possible. (done)
-  \item Create a dot file for the code to be used with the control flow.
+  \item Improve visualization
+  \begin{itemize}
+    \item Create a mode that only shows final one
+    \item Create a mode that only shows relevant ones
+    \item Create a mode that only shows alls
+    \item Resize images
+  \end{itemize}
+  \item Polish code
+  \item Report
 \end{itemize}
 
 \bibliographystyle{plain}
